--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,30 @@
 
-h1 {
+.tenez {
   font-family: tenez, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.karmina {
+  font-family: karmina, serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.nobel-book {
+  font-family: nobel, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.nobel-reg {
+  font-family: nobel, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.nobel-bold {
+  font-family: nobel, sans-serif;
   font-weight: 700;
   font-style: normal;
 }
