--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
+/* ......................Adobe Fonts....................... */
 
 .tenez {
   font-family: tenez, sans-serif;
   font-weight: 700;
   font-style: normal;
+  color: #fff;
 }
 
 .karmina {
@@ -27,4 +29,134 @@
   font-family: nobel, sans-serif;
   font-weight: 700;
   font-style: normal;
+}
+
+.red-text {
+  color: #d22027;
+}
+
+/* ......................Text....................... */
+
+h2 {
+  color: #f2f2f2;
+}
+
+/* #d22027 <-- Red from original layout*/
+
+/* ......................General....................... */
+
+html {
+  font-family: nobel, sans-serif;
+  font-weight: 700;
+}
+
+.btn {
+  border-radius: 4px;
+  border: .5px solid rgba(85, 23, 24, .6);
+  margin: 0;
+  text-align: center;
+  width: 100%;
+  /* color: #333; */
+  color: rgba(85, 23, 24, 1);
+}
+
+.btn:hover {
+  background-color: rgba(85, 23, 24, .6);
+  color: #fff;
+  border: none;
+  /* box-shadow: inset 0px 0.5px 5px #000; */
+}
+
+.btn:focus {
+  background-color: rgba(85, 23, 24, .6);
+  color: #fff;
+  border: none;
+  box-shadow: inset 0 .5px 5px #555;
+}
+
+/* ....................Header......................... */
+
+.banner-container {
+  height: 10rem;
+  overflow: hidden;
+  box-shadow: 0px 3px 15px #333;
+}
+
+.heading {
+  bottom: 0;
+
+}
+
+.grid-middle {
+  background-image: linear-gradient(to bottom, rgba(235, 117, 38, .1), rgba(85, 23, 24, .6));
+  background-size: cover;
+}
+
+.stretch {
+  width: 100%;
+  height: 100%;
+}
+
+/* ......................Nav....................... */
+
+nav {
+  text-align: center;
+  border-bottom: 1px solid #f2f2f2;
+  box-shadow: 0px .5px 15px #555;
+}
+
+.current {
+  background-color: rgba(85, 23, 24, .9);
+  color: #fff;
+  border: none;
+  box-shadow: inset 0px .5px 5px #555;
+}
+
+/* .....................Intro/Content........................ */
+
+main {
+  background-image: linear-gradient(to bottom, rgba(85, 23, 24, .1), rgba(85, 23, 24, .9));
+}
+
+.content-card {
+  background-color: #f2f2f2;
+  box-shadow: 0px 5.5px 10px #000;
+  padding: 3rem;
+  margin: 0 1.5rem;
+}
+
+.content-card-transparent {
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 0px 5.5px 10px #555;
+  padding: 3rem;
+}
+
+.introduction {
+  background-image: url("../images/splash-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+
+@media only screen and (min-width: 60em) {
+
+  .content-card-transparent {
+    box-shadow: 0px 5.5px 10px #000;
+    margin: 0 3rem;
+  }
+
+  .content-card {
+    box-shadow: 0px 5.5px 10px #000;
+  }
+
+  article {
+    padding: 3em;
+  }
+
+  .introduction {
+    box-shadow: inset 0px 5.5px 10px #888;
+
+  }
+
 }
