--- a/css/main.css
+++ b/css/main.css
@@ -35,13 +35,17 @@
   color: #d22027;
 }
 
+.white-text {
+  color: #fff;
+}
+
 /* ......................Text....................... */
 
 h2 {
   color: #f2f2f2;
 }
 
-/* #d22027 <-- Red from original layout*/
+/* #d22027<-- Red from original layout */
 
 /* ......................General....................... */
 
@@ -56,6 +60,7 @@ html {
   margin: 0;
   text-align: center;
   width: 100%;
+
   /* color: #333; */
   color: rgba(85, 23, 24, 1);
 }
@@ -64,6 +69,7 @@ html {
   background-color: rgba(85, 23, 24, .6);
   color: #fff;
   border: none;
+
   /* box-shadow: inset 0px 0.5px 5px #000; */
 }
 
@@ -79,12 +85,11 @@ html {
 .banner-container {
   height: 10rem;
   overflow: hidden;
-  box-shadow: 0px 3px 15px #333;
+  box-shadow: 0 3px 15px #333;
 }
 
 .heading {
   bottom: 0;
-
 }
 
 .grid-middle {
@@ -102,31 +107,64 @@ html {
 nav {
   text-align: center;
   border-bottom: 1px solid #f2f2f2;
-  box-shadow: 0px .5px 15px #555;
+  box-shadow: 0 .5px 15px #555;
 }
 
 .current {
   background-color: rgba(85, 23, 24, .9);
   color: #fff;
   border: none;
-  box-shadow: inset 0px .5px 5px #555;
+  box-shadow: inset 0 .5px 5px #555;
 }
 
 /* .....................Intro/Content........................ */
 
 main {
-  background-image: linear-gradient(to bottom, rgba(85, 23, 24, .1), rgba(85, 23, 24, .9));
+  background-image: linear-gradient(to bottom, rgba(85, 23, 24, .1), rgba(85, 23, 24, .2));
+}
+
+a {
+  text-decoration: none;
 }
 
 .content-card {
   background-color: #f2f2f2;
-  box-shadow: 0px 5.5px 10px #000;
-  padding: 3rem;
-  margin: 0 1.5rem;
+  box-shadow: 0 5.5px 10px #000;
+  /* padding: 3rem; */
+  /* margin: 0 1.5rem; */
+  overflow: hidden;
+  filter: grayscale(0%);
+  margin-bottom: 1rem;
+
+}
+
+.card-height {
+  height: 15rem;
+}
+
+.drop-title {
+  top: 8rem;
+  opacity: 0;
+  width: 90%;
+}
+
+.link-card:hover .drop-title {
+  opacity: 1;
+  transition: .5s ease-out;
+}
+
+.link-card:hover .img-bottom {
+  filter: grayscale(80%);
+  filter: brightness(50%);
+  transition: .5s ease-out;
+}
+
+.img-bottom {
+  height: 100%;
 }
 
 .content-card-transparent {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, .9);
   box-shadow: 0px 5.5px 10px #555;
   padding: 3rem;
 }
@@ -138,16 +176,16 @@ main {
   background-position: right;
 }
 
-
 @media only screen and (min-width: 60em) {
 
   .content-card-transparent {
-    box-shadow: 0px 5.5px 10px #000;
+    box-shadow: 0 5.5px 10px #000;
     margin: 0 3rem;
   }
 
   .content-card {
     box-shadow: 0px 5.5px 10px #000;
+    margin-bottom: 0;
   }
 
   article {
@@ -155,8 +193,7 @@ main {
   }
 
   .introduction {
-    box-shadow: inset 0px 5.5px 10px #888;
-
+    box-shadow: inset 0 5.5px 10px #888;
   }
 
 }
