--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ html {
 }
 
 .title {
-  left: 2rem;
+  left: 1rem;
 }
 
 .top-btn {
@@ -251,6 +251,14 @@ footer {
 
 .ing-col {
   padding-right: 2rem;
+}
+
+@media only screen and (min-width: 25em) {
+
+  .title {
+    left: 2rem;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
