--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,20 @@ html {
 
 }
 
+.btn-card {
+  border-radius: 4px;
+  border: .5px solid rgba(85, 23, 24, 1);
+  margin: 0;
+  text-align: center;
+  padding: .375em 1em .42em;
+  background-color: rgba(85, 23, 24, 1);
+  color: #fff;
+}
+
+.btn-card:hover {
+  background-color: rgba(85, 23, 24, .6);
+  border-color: inherit;
+}
 /* ....................Header......................... */
 
 .banner-container {
