--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@
 }
 
 .pink-text {
-  color: rgba(85, 23, 24, .9)
+  color: rgba(85, 23, 24, .9);
 }
 
 /* ......................Text....................... */
@@ -48,8 +48,6 @@
 h2 {
   color: #f2f2f2;
 }
-
-/* #d22027<-- Red from original layout */
 
 /* ......................General....................... */
 
@@ -64,8 +62,6 @@ html {
   margin: 0;
   text-align: center;
   width: 100%;
-
-  /* color: #333; */
   color: rgba(85, 23, 24, 1);
 }
 
@@ -74,9 +70,6 @@ html {
   color: #fff;
   border: none;
   transition: .3s ease-out;
-
-
-  /* box-shadow: inset 0px 0.5px 5px #000; */
 }
 
 .btn:focus {
@@ -84,7 +77,6 @@ html {
   color: #fff;
   border: none;
   box-shadow: inset 0 .5px 5px #555;
-
 }
 
 .btn-card {
@@ -101,12 +93,12 @@ html {
   background-color: rgba(85, 23, 24, .6);
   border-color: inherit;
 }
+
 /* ....................Header......................... */
 
 .banner-container {
   height: 7.5rem;
   overflow: hidden;
-  /* box-shadow: 0 3px 15px #333; */
   position: fixed;
   top: 0;
   z-index: 100;
@@ -132,21 +124,19 @@ html {
 
 .top-btn {
   right: 1rem;
-  bottom: 0.5rem;
+  bottom: .5rem;
   width: 2.5rem;
 }
 
 .arrow {
-  padding: 0.5rem 0;
+  padding: .5rem 0;
 }
-
 
 /* ......................Nav....................... */
 
 nav {
   text-align: center;
   border-bottom: 1px solid #f2f2f2;
-  /* box-shadow: 0 .5px 15px #555; */
   margin-top: 7.5rem;
 }
 
@@ -161,8 +151,8 @@ nav {
   width: 10px;
   height: 10px;
   top: -7.5rem;
-
 }
+
 /* .....................Intro/Content........................ */
 
 main {
@@ -179,14 +169,10 @@ footer {
 
 .content-card {
   background-color: #f2f2f2;
-  /* box-shadow: 0 5.5px 10px #000; */
-  /* padding: 3rem; */
-  /* margin: 0 1.5rem; */
   overflow: hidden;
   filter: grayscale(0%);
   margin-bottom: 1rem;
   border-radius: 8px;
-
 }
 
 .card-height {
@@ -216,10 +202,8 @@ footer {
 
 .content-card-transparent {
   background-color: rgba(255, 255, 255, .9);
-  /* box-shadow: 0px 5.5px 10px #555; */
   padding: 3rem;
   border-radius: 8px;
-
 }
 
 .introduction {
@@ -236,7 +220,7 @@ footer {
   background-position: right;
 }
 
-.recipe-b{
+.recipe-b {
   background-image: url("../images/crinkle.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -278,21 +262,15 @@ footer {
 @media only screen and (min-width: 60em) {
 
   .content-card-transparent {
-    /* box-shadow: 0 5.5px 10px #000; */
     margin: 0 3rem;
   }
 
   .content-card {
-    /* box-shadow: 0px 5.5px 10px #000; */
     margin-bottom: 0;
   }
 
   article {
     padding: 3em;
-  }
-
-  .introduction {
-    /* box-shadow: inset 0 5.5px 10px #888; */
   }
 
 }
